--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,15 @@
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
 *{
   font-family: 'Roboto', sans-serif;
   margin: 0px;
+  overflow-x: hidden;
 }
     </style>
-    <title>John Kahura</title>
+    <title>John Mungai</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
